package com.kumorai.nexo.content.entity;

public enum AnnouncementType {
    GENERAL,
    ASAMBLEA
}
