package com.kumorai.nexo.content.entity;

public enum CalendarEventType {
    FESTIVO,
    PARO,
    INSCRIPCIONES,
    OTRO
}
