package com.kumorai.nexo.content.entity;

public enum WelfareCategory {
    APOYO_ALIMENTARIO,
    BECAS,
    SALUD_MENTAL,
    SERVICIOS_SALUD
}
